Enhancements
* Download Support Bundle (#332)
* Add label to explain why Syncthing Options are greyed out (#337)
Notes
* Syncthing v1.0.1
* Refer to GitHub for detailed change log.